--- a/lesli.yml
+++ b/lesli.yml
@@ -35,8 +35,22 @@ account:
 # Instance configuration
 configuration:
     locales:
-        en: "English"
-        es: "Español"
+        en: "English"       # English
+        de: "Deutsch"       # Deutsch/German
+        pl: "Polski"        # Polski/Polish/Poland
+        nl: "Dutch"         # Dutch/Nederlands/Netherlands
+        es: "Español"       # Español/Spanish
+        uk: "украї́нська"    # украї́нська/Ukrainian
+        sr: "Српски"        # Српски/Srpski/Serbian
+        it: "Italiano"      # Italiano/Italian
+        hr: "Hrvatski"      # Hrvatski/Croatian
+        fr: "Français"      # French
+        pt: "Português"     # Portuguese
+        tr: "Türkçe"        # Turkish
+        ro: "Română"        # Romanian
+        bg: "български"     # Bulgarian
+        ru: "Россия"        # Russian
+
     datetime: 
         time_zone: "America/Guatemala" 
         start_week_on: "monday"
