feat: add vue3 shared dashboard concepts

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "remixicon": "2.5.0",
         "v-calendar": "3.0.0-alpha.8",
         "sweetalert2": "11.4.8",
+        "sortablejs": "1.15.0",
         "apexcharts": "3.36.3",
         "trix": "2.0.4",
 
