ci: update github workflows and actions

--- a/.github/workflows/lesli-version.yaml
+++ b/.github/workflows/lesli-version.yaml
@@ -1,19 +1,19 @@
-# Copyright (c) 2022, all rights reserved.
-# 
-# All the information provided by this platform is protected by international laws related  to 
-# industrial property, intellectual property, copyright and relative international laws. 
-# All intellectual or industrial property rights of the code, texts, trade mark, design, 
+# Copyright (c) 2023, all rights reserved.
+#
+# All the information provided by this platform is protected by international laws related  to
+# industrial property, intellectual property, copyright and relative international laws.
+# All intellectual or industrial property rights of the code, texts, trade mark, design,
 # pictures and any other information belongs to the owner of this platform.
-# 
+#
 # Without the written permission of the owner, any replication, modification,
 # transmission, publication is strictly forbidden.
-# 
+#
 # For more information read the license file including with this software.
 
 
 # Specs for Lesli Core
 # -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
-name: "Lesli new version"
+name: "Lesli new core version"
 on:
   push:
     branches: [ "production" ]
@@ -29,7 +29,7 @@ jobs:
     steps:
 
       # Send a message to slack announcing the workflow start
-      - name: Notify slack github actions start 
+      - name: Notify slack github actions start
         uses: LesliTech/github-action-slack-job-status@v1
         with:
           job-status: INFO
@@ -62,7 +62,7 @@ jobs:
 
       # Install node dependencies for vue2 apps
       - name: NPM install vue2
-        run: npm install --prefix ./lib/vue2 
+        run: npm install --prefix ./lib/vue2
 
 
       # Compile vue2 app
@@ -75,7 +75,7 @@ jobs:
         run: npm run webpack3:production
 
 
-      # Comit the javascript apps so the gem includes the compiled version
+      # Commit the javascript apps so the gem includes the compiled version
       - name: Commit compiled javascript app
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
@@ -88,7 +88,7 @@ jobs:
       # Build a new version for the core
       - name: Bump version and push tag
         uses: ./tmp/.github/actions/github-action-rails-new-version
-        id: bumVersion
+        id: bumpVersion
         env:
           RELEASE_BRANCHES: production
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -108,7 +108,7 @@ jobs:
       # The newly created tag is deleted if a step fails or the workflow is cancelled.
       - name: Delete Tag
         if: "cancelled() || failure()"
-        run: git push --delete origin ${{ steps.bumVersion.outputs.new_tag}}
+        run: git push --delete origin ${{ steps.bumpVersion.outputs.new_tag }}
 
 
       # Send a message to slack with the status of the workflow
