--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -1,13 +1,13 @@
-# Copyright (c) 2022, all rights reserved.
-# 
-# All the information provided by this platform is protected by international laws related  to 
-# industrial property, intellectual property, copyright and relative international laws. 
-# All intellectual or industrial property rights of the code, texts, trade mark, design, 
+# Copyright (c) 2023, all rights reserved.
+#
+# All the information provided by this platform is protected by international laws related  to
+# industrial property, intellectual property, copyright and relative international laws.
+# All intellectual or industrial property rights of the code, texts, trade mark, design,
 # pictures and any other information belongs to the owner of this platform.
-# 
+#
 # Without the written permission of the owner, any replication, modification,
 # transmission, publication is strictly forbidden.
-# 
+#
 # For more information read the license file including with this software.
 
 
@@ -16,13 +16,16 @@
 name: "Lesli specs workflow"
 on:
 
-  # execute this workflow only when trying to merge from dev branch to master 
+
+  # execute this workflow only when trying to merge from dev branch to master
   pull_request:
     branches: [master, production]
+
 
   # run a test daily at 1 am (Guatemala time)
   schedule:
     - cron: '0 1 * * *'
+
 
   # Allow to execute this test manually from the Github web app
   workflow_dispatch:
@@ -32,8 +35,10 @@ jobs:
     name: Test workflow for Lesli Core
     runs-on: lomax
 
+
     # Do not execute the test if requests comes from another action
     if: "!contains(github.event.head_commit.message, 'release(gem):') && !contains(github.event.head_commit.message, 'assets(js):') && !contains(github.event.head_commit.message, 'ci(workflows):')"
+
 
     # Start database service necessary to execute the RSpec tests
     services:
@@ -51,8 +56,8 @@ jobs:
         ports:
           - 5432:5432
 
-    steps:
 
+    steps:
 
       # Set the right owner for work folders
       - name: Set folder righ permissions
@@ -60,7 +65,7 @@ jobs:
 
 
       # Send a message to slack announcing the workflow start
-      - name: Notify slack github actions start 
+      - name: Notify slack github actions start
         uses: LesliTech/github-action-slack-job-status@v1
         with:
           channel: alerts
@@ -75,6 +80,225 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+
+
+      # · Checkout engines (most used engines)
+
+      - name: Checkout cloud_audit
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_audit
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_audit
+
+      - name: Checkout cloud_babel
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_babel
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_babel
+
+      - name: Checkout cloud_bell
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_bell
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_bell
+
+      - name: Checkout cloud_development
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_development
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_development
+
+      - name: Checkout cloud_dispatcher
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_dispatcher
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_dispatcher
+
+      - name: Checkout cloud_driver
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_driver
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_driver
+
+      - name: Checkout cloud_drop
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_drop
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_drop
+
+      - name: Checkout cloud_federation
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_federation
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_federation
+
+      - name: Checkout cloud_focus
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_focus
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_focus
+
+      - name: Checkout cloud_help
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_help
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_help
+
+      - name: Checkout cloud_house
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_house
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_house
+
+      - name: Checkout cloud_kb
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_kb
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_kb
+
+      - name: Checkout cloud_mailer
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_mailer
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_mailer
+
+      - name: Checkout cloud_one
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_one
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_one
+
+      - name: Checkout cloud_portal
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_portal
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_portal
+
+      - name: Checkout cloud_proposal
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_proposal
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_proposal
+
+      - name: Checkout cloud_realty
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_realty
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_realty
+
+      - name: Checkout cloud_scraper
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_scraper
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_scraper
+
+      - name: Checkout cloud_shared
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_shared
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_shared
+
+      - name: Checkout cloud_social
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_social
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_social
+
+      - name: Checkout cloud_storage
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_storage
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_storage
+
+      - name: Checkout cloud_talk
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_talk
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_talk
+
+      - name: Checkout cloud_team
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_team
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_team
+
+      - name: Checkout cloud_text
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_text
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_text
+
+      - name: Checkout cloud_things
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_things
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_things
+
+      - name: Checkout cloud_word
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_word
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_word
+
+      - name: Checkout cloud_work
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/cloud_work
+          ref: master
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          repository: leitfaden/cloud_work
 
 
       # Use the official receipt to install ruby in ubuntu
