ci: comment inactive engines

--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -140,13 +140,13 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_drop
 
-      - name: Checkout cloud_federation
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_federation
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_federation
+      # - name: Checkout cloud_federation
+      #   uses: actions/checkout@v3
+      #   with:
+      #     path: ./engines/cloud_federation
+      #     ref: master
+      #     token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+      #     repository: leitfaden/cloud_federation
 
       - name: Checkout cloud_focus
         uses: actions/checkout@v3
@@ -164,21 +164,21 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_help
 
-      - name: Checkout cloud_house
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_house
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_house
+      # - name: Checkout cloud_house
+      #   uses: actions/checkout@v3
+      #   with:
+      #     path: ./engines/cloud_house
+      #     ref: master
+      #     token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+      #     repository: leitfaden/cloud_house
 
-      - name: Checkout cloud_kb
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_kb
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_kb
+      # - name: Checkout cloud_kb
+      #   uses: actions/checkout@v3
+      #   with:
+      #     path: ./engines/cloud_kb
+      #     ref: master
+      #     token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+      #     repository: leitfaden/cloud_kb
 
       - name: Checkout cloud_mailer
         uses: actions/checkout@v3
@@ -196,13 +196,13 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_one
 
-      - name: Checkout cloud_portal
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_portal
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_portal
+      # - name: Checkout cloud_portal
+      #   uses: actions/checkout@v3
+      #   with:
+      #     path: ./engines/cloud_portal
+      #     ref: master
+      #     token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+      #     repository: leitfaden/cloud_portal
 
       - name: Checkout cloud_proposal
         uses: actions/checkout@v3
@@ -212,13 +212,13 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_proposal
 
-      - name: Checkout cloud_realty
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_realty
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_realty
+      # - name: Checkout cloud_realty
+      #   uses: actions/checkout@v3
+      #   with:
+      #     path: ./engines/cloud_realty
+      #     ref: master
+      #     token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+      #     repository: leitfaden/cloud_realty
 
       - name: Checkout cloud_scraper
         uses: actions/checkout@v3
@@ -268,13 +268,13 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_team
 
-      - name: Checkout cloud_text
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_text
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_text
+      # - name: Checkout cloud_text
+      #   uses: actions/checkout@v3
+      #   with:
+      #     path: ./engines/cloud_text
+      #     ref: master
+      #     token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+      #     repository: leitfaden/cloud_text
 
       - name: Checkout cloud_things
         uses: actions/checkout@v3
@@ -292,13 +292,13 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_word
 
-      - name: Checkout cloud_work
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_work
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_work
+      # - name: Checkout cloud_work
+      #   uses: actions/checkout@v3
+      #   with:
+      #     path: ./engines/cloud_work
+      #     ref: master
+      #     token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+      #     repository: leitfaden/cloud_work
 
 
       # Use the official receipt to install ruby in ubuntu
