--- a/lib/generators/test/templates/requests/show_spec.template
+++ b/lib/generators/test/templates/requests/show_spec.template
@@ -6,45 +6,45 @@
 
 require "lesli_request_helper"
 
-RSpec.describe "Tests for Lesli3", type: :request, :unless => defined?(DeutscheLeibrenten) do
+RSpec.describe "Tests for Lesli3", type: :request do
     describe "GET:[[url]]/:id.json", type: :request do
         include_context "request user authentication"
 
         # helper methods
 
         def create_element
-            #if it necesary, define a method to create and object and be sure the table will not be empty of data
+            # if it necesary, define a method to create and object and be sure the table will not be empty of data
             @current_user.[[controller_folder]].[[controller_file]].destroy_all
 
-            #search posibles permit values to create an element, controller module should be in singular way
+            # search posibles permit values to create an element, controller module should be in singular way
             params = [[controller_folder_upper]]::[[controller_file_upper]].column_names
             params_hash_value = {}
 
-            #cast column_names (its an Array) into a hash an insert values
+            # cast column_names (its an Array) into a hash an insert values
             params.each do |value|
-                #avoid fill id and date values
+                # avoid fill id and date values
                 if !((value.include? "id") || (value.include? "at") )
                     params_hash_value[value] = Faker::Lorem.word
                 end
             end
 
-            #create new object
-            new_object =  @current_user.[[controller_folder]].[[controller_file]].new({})
+            # create new object
+            new_object = @current_user.[[controller_folder]].[[controller_file]].new({})
 
-            #avoid  unknown attribute when create objects
+            # avoid unknown attribute when create objects
             new_object.attributes = params_hash_value.reject{|k,v| !new_object.attributes.keys.member?(k.to_s) }
-            
-            #save object
+
+            # save object
             new_object.save!
             return new_object
         end
-        
+
         # test cases
-        #one or more test could fail when first run them, verify the routes, controller locations and names
+        # one or more test could fail when first run them, verify the routes, controller locations and names
         #
 
         it "is expected to respond with the record data" do
-            #make sure you have created some elements before run test and reference its id 
+            # make sure you have created some elements before run test and reference its id
             [[controller_folder]]_object = create_element
 
             get("[[url]]/#{[[controller_folder]]_object.id}.json")
@@ -55,15 +55,15 @@ RSpec.describe "Tests for Lesli3", type: :request, :unless => defined?(DeutscheL
         end
 
         it "is expected to respond with not found when an invalid ID is sent" do
-            #at least one element should be in table to test the method
+            # at least one element should be in table to test the method
             create_element
 
             # this ID does not exist, so should return with not found
             invalid_id = @current_user.[[controller_folder]].[[controller_file]].last.id + 1
-            
-            #before run test, you must create an object of the class youll like to test
 
-            #test will fail if element id exist
+            # before run test, you must create an object of the class youll like to test
+
+            # test will fail if element id exist
             get("[[url]]/#{invalid_id}.json")
 
             # shared examples
