fix: add missing dependency for new calendar

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "trix": "2.0.4",
 
         "@fullcalendar/core": "6.0.2",
+        "@fullcalendar/list": "6.0.2",
         "@fullcalendar/daygrid": "6.0.2",
         "@fullcalendar/timegrid": "6.0.2",
         "@fullcalendar/interaction": "6.0.2",
@@ -59,7 +60,7 @@
     "scripts": {
         "webpack:production": "npm run webpack3:production",
         "webpack:watch": "npm run webpack3:watch",
-        "webpack": "npm run webpack2 && npm run webpack3",
+        "webpack": "npm run webpack3",
 
         "webpack2:production": "npm run --prefix ./lib/vue2 webpack:production",
         "webpack2:watch": "npm run --prefix ./lib/vue2 webpack:watch",
