--- a/lesli.yml
+++ b/lesli.yml
@@ -82,10 +82,9 @@ security:
 
 # Main color palette for Lesli
 theme:
-    color_background: #F0F8FF
-    color_primary: #112A62 # Lesli navy
-    color_sidebar: #112A62 # Lesli navy
-    color_sidebar: #172347 # Lesli ocean
+    color_background: "#F0F8FF"
+    color_primary: "#112A62" # Lesli navy
+    color_sidebar: "#112A62" # Lesli navy
     color_header: transparent
     color_footer: transparent
 
