--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -32,7 +32,7 @@ on:
 
   # run a test daily at 1 am (Guatemala time)
   schedule:
-    - cron: '0 1 * * *'
+    - cron: '0 0 * * 0'
 
 
   # Allow to execute this test manually from the Github web app
@@ -64,6 +64,8 @@ jobs:
         ports:
           - 5432:5432
 
+    env: 
+      BUNDLE_GEMFILE: ./tmp/.github/env/Gemfile
 
     steps:
 
@@ -72,22 +74,32 @@ jobs:
         run: "sudo chown -R $USER:$USER $GITHUB_WORKSPACE/"
 
 
-      # Send a message to slack announcing the workflow start
-      - name: Notify slack github actions start
-        uses: LesliTech/github-action-slack-job-status@v1
-        with:
-          channel: alerts
-          job-status: INFO
-          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
-          msg: "Github actions start [ ${{ github.event.pull_request.head.ref }} -> ${{ github.event.pull_request.base.ref }} ]"
-
-
       # Clone the current repository
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+
+
+      # Clone our custom actions
+      - name: Checkout github actions repo
+        uses: actions/checkout@v3
+        with:
+          ref: master
+          repository: leitfaden/github_actions
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          path: ./tmp/.github/
+
+
+      # Send a message to slack announcing the workflow start
+      - name: Notify slack github actions start
+        uses: ./tmp/.github/actions/github-action-slack-job-status
+        with:
+          channel: alerts
+          job-status: INFO
+          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
+          msg: "Github actions start [ ${{ github.event.pull_request.head.ref }} -> ${{ github.event.pull_request.base.ref }} ]"
 
 
       # · Checkout engines (most used engines)
@@ -140,14 +152,6 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_driver
 
-      - name: Checkout cloud_focus
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_focus
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_focus
-
       - name: Checkout cloud_help
         uses: actions/checkout@v3
         with:
@@ -155,22 +159,6 @@ jobs:
           ref: master
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_help
-
-      - name: Checkout cloud_house
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_house
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_house
-
-      - name: Checkout cloud_mailer
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_mailer
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_mailer
 
       - name: Checkout cloud_one
         uses: actions/checkout@v3
@@ -180,14 +168,6 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_one
 
-      - name: Checkout cloud_scraper
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_scraper
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_scraper
-
       - name: Checkout cloud_shared
         uses: actions/checkout@v3
         with:
@@ -195,22 +175,6 @@ jobs:
           ref: master
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_shared
-
-      - name: Checkout cloud_social
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_social
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_social
-
-      - name: Checkout cloud_storage
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_storage
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_storage
 
       - name: Checkout cloud_talk
         uses: actions/checkout@v3
@@ -228,22 +192,13 @@ jobs:
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
           repository: leitfaden/cloud_team
 
-      - name: Checkout cloud_things
+      - name: Checkout cloud_time
         uses: actions/checkout@v3
         with:
-          path: ./engines/cloud_things
+          path: ./engines/cloud_time
           ref: master
           token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_things
-
-      - name: Checkout cloud_word
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/cloud_word
-          ref: master
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-          repository: leitfaden/cloud_word
-
+          repository: leitfaden/cloud_time
 
       # Use the official receipt to install ruby in ubuntu
       - name: Install Ruby and gems
@@ -290,7 +245,7 @@ jobs:
       # Send a message to slack with the status of the workflow
       - name: Notify by slack
         if: always()
-        uses: LesliTech/github-action-slack-job-status@v1
+        uses: ./tmp/.github/actions/github-action-slack-job-status
         with:
           job-status: ${{ job.status }}
           slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
