--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -98,7 +98,7 @@ jobs:
           slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
           msg: "Github actions start [ ${{ github.event.pull_request.head.ref }} -> ${{ github.event.pull_request.base.ref }} ]"
 
-      - name: Set up database schema
+      - name: Set up package files
         run: |
           cp -fr ./tmp/.github/env/Gemfile ./Gemfile
           cp -fr ./tmp/.github/env/Gemfile.lock ./Gemfile.lock
