--- a/lesli.yml
+++ b/lesli.yml
@@ -92,9 +92,10 @@ security:
 theme:
     color_background: "#fbf7f4"
     color_primary: "#193d8d"
-    color_sidebar: "#fbf7f4"
+    color_sidebar: transparent
     color_header: transparent
     color_footer: transparent
+    color_sidebar_hover: "#d1deff"
 
 
 # Configuration by environment
