--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -93,47 +93,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
-
-
-      # Use the official receipt to install ruby in ubuntu
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7.2
-          bundler-cache: true
-        env:
-          ImageOS: ubuntu20
-
-
-      # Build the Lesli database
-      - name: Set up database schema
-        run: |
-          cp ./config/credentials/testci.yml.enc ./config/credentials/test.yml.enc
-          bundle list
-          bundle exec rake db:drop
-          bundle exec rake db:create
-          bundle exec rake db:migrate
-          bundle exec rake db:setup
-        env:
-          RAILS_ENV: test
-          RAILS_MASTER_KEY: ${{ secrets.CORE_RAILS_MASTER_KEY_TEST }}
-
-
-      # Run Rspec tests
-      - name: Run Spec tests
-        run: bundle exec rspec spec
-        env:
-          RAILS_ENV: test
-          RAILS_MASTER_KEY: ${{ secrets.CORE_RAILS_MASTER_KEY_TEST }}
-
-
-      # Install node dependencies needed for vue tests
-      - name: NPM install
-        run: npm install
-
-
-      # Run Vue tests
-      - name: Run Vue tests
-        run: npm run test:vue
+          fetch-depth: 0
