--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -70,9 +70,9 @@ jobs:
       postgres:
         image: postgres:11.5
         env:
-          POSTGRES_DB: "lesli_test"
-          POSTGRES_USER: "lesli_test"
-          POSTGRES_PASSWORD: "lesli_test"
+          POSTGRES_DB: "lesli-test"
+          POSTGRES_USER: "lesli-test"
+          POSTGRES_PASSWORD: "lesli-test"
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
