--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -107,6 +107,8 @@ jobs:
       # Build the Lesli database
       - name: Set up database schema
         run: |
+          cp ./config/credentials/testci.key ./config/credentials/test.key
+          cp ./config/credentials/testci.yml.enc ./config/credentials/test.yml.enc
           bundle exec rake db:drop
           bundle exec rake db:create
           bundle exec rake db:migrate
